[ADDED] Event info into event list

--- a/EverywhereHouseController/res/values/strings.xml
+++ b/EverywhereHouseController/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="profile">Perfil</string>
     <string name="change_user">Cambiar Usuario</string>
     <string name="exit">Salir</string>
+    <string name="daily">Daily Appointments</string>
 
 </resources>
