[ADDED] FragmentDialog which holds all data needed to create an event

--- a/EverywhereHouseController/res/values/strings.xml
+++ b/EverywhereHouseController/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="chooser_title">Lorem ipsum</string>
     <string name="exit">Salir</string>
     <string name="daily">Daily Appointments</string>
-
+    <string name="event_name">Event name</string>
+    
 </resources>
