[MODIFIED] TextView and Spinner background changed to the same color as background. Font color has been changed to white color

--- a/EverywhereHouseController/res/values/strings.xml
+++ b/EverywhereHouseController/res/values/strings.xml
@@ -8,7 +8,9 @@
     <string name="chooser_title">Lorem ipsum</string>
     <string name="exit">Salir</string>
     <string name="daily">Daily Appointments</string>
-    <string name="event_name">Event name</string>
+    <string name="event_name">Insert a event name</string>
+    <string name="service_name">Select a service</string>
+    <string name="action_name">Select an action</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     
